Hide some panel in small layout, fix navbar collapsed style

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -47,13 +47,18 @@ body {
   .navbar-default .navbar-brand,
   .navbar-default .navbar-nav>li>a  { color: $blueText; }
   .navbar-inverse .navbar-nav .open .dropdown-menu .divider { color: $blueText !important; }
-  .navbar-inverse .navbar-toggle { border-color: $blueText; }
-  .navbar-inverse .navbar-toggle:focus,.navbar-inverse .navbar-toggle:hover{background-color:$blueLight; }
+  .navbar-inverse .navbar-toggle { padding: 3px 9px; font-size: 18px; border:1px solid rgba(255,255,255,0.1); background-color: rgba(255,255,255,0.05); }
+  .navbar-inverse .navbar-toggle:focus { background-color: rgba(255,255,255,0.05);}
+  .navbar-inverse .navbar-toggle:hover { background-color: rgba(255,255,255,0.1); }
   .navbar-inverse .navbar-collapse,
   .navbar-inverse .navbar-form { border-color: $blueText; }
+  nav.navbar-collapse.bs-navbar-collapse { border-color: rgba(255,255,255,0.3); }
   .navbar-inverse .navbar-nav>.open>a,
   .navbar-inverse .navbar-nav>.open>a:focus,
   .navbar-inverse .navbar-nav>.open>a:hover { background: $blueDark}
+  .navbar-inverse .navbar-nav .open .dropdown-menu>li>a { color: $blueText; }
+  .navbar-inverse .navbar-nav .open .dropdown-menu>li>a:hover { background-color: rgba(255,255,255,0.05); }
+  .navbar-inverse .navbar-nav .open .dropdown-menu .divider { background-color: rgba(255,255,255,0.1); }
   .navbar-nav {
     a { }
     a.active { border-bottom:5px solid $blueDark; padding-bottom: 10px;}
@@ -125,6 +130,9 @@ a { color: $blue; }
 .btn-primary:hover { background: $blueLight; border-color: $blueLight; }
 .btn-danger { background: $red; border-color: $red; }
 .btn-danger { background: $red; border-color: $red; }
+.navbar-btn { background: rgba(255,255,255, 0.1); color: $blueText; border:0px;}
+.navbar-btn:hover { background: rgba(255,255,255, 0.15); color: $blueText;}
+
 .form-group {
   label { font-weight: normal; color: rgba(0, 0, 0, 0.40); font-size: 13px; margin-bottom: 0px;}
 }
